updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm just a gal trying to put my life together, one code at a time!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Clearwater, FL and raised in southern Ohio.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love aerial fitness. I spend most of my free time practicing aerial silks or pole.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to have a career that is as fun and ever changing as my life! I want to pursue my dream of developing software (remotely) while continuing to travel and make memories with my family. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I have lived in 7 different states, but currently I call western Kentucky home!</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>As a creative person who also has an interest in technology, I would like to combine these attributes and develope my own software and apps. I have many different ideas that I can't wait to see come to life!</p>
     </section>
 
     <footer id="footer">
